terraform/modules/vpc/igw.tf
resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.this.id

  tags = {
    Name = "${var.name}-igw"
  }

}
